_sass/temple/_header.scss
nav.university-nav {
  color: $navbar-university-font-color;
  background-color: $navbar-university-backgroud-color;
  height: $navbar-university-height;
  line-height: $navbar-university-height;
  box-shadow: none;
  border-bottom: 1px solid lightGray;

  a { color: $navbar-university-font-color; }
  
  a.university-title {
    margin-left: -20px;
    padding-top: 5px;
    padding-bottom: 0;
    height: 50px;
  }

  a {
    @media #{$medium-and-down} {
      font-size: .8rem!important;
      padding-left: .5rem!important;
      padding-right: .5rem!important;
    }
  }

  .college-title {
    font-weight: bold;
    // line-height: 2.5em;
    background: $tu-cherry;
    color: white;
    // margin-left: -1.25rem;
    // letter-spacing: 0px;
    &:hover {
      background: darken($tu-cherry, 5%);
    }
    i.material-icons {
      height: inherit;
      line-height: 1rem;
      vertical-align: middle;
      transition: transform 100ms linear;
    }
    @media #{$large-and-up} {
      // position: absolute;
      // top: -2.85em;
      // left: 250px;
      // border-radius: 50px !important;
      // background: none !important;
      // color: #a41e35 !important;
    }
  }

  form i.material-icons {
    // font-size: 24px;
    font-size: 1.25rem;
    height: $navbar-university-height;
    line-height: $navbar-university-height;
  }

  // Collapse button
  .button-collapse {
    height: $navbar-university-height;

    i {
      font-size: 2.5rem;
      height: $navbar-university-height;
      line-height: $navbar-university-height;
    }
  }

  // Navbar Links
  ul {

    li {

      &.active {
        background-color: rgba(0,0,0,.1);
      }
    }
    a {
      font-size: $navbar-university-font-size;
      color: $navbar-university-font-color;
      padding: 0 15px;
      @media #{$medium-and-down} {
        padding: 0 12px;
      }      
      &:hover {
        background-color: rgba(0,0,0,.1);
      }
    }
    &.left {
      float: left;
    }
  }

  // Navbar Search Form
  .input-field {
    overflow: hidden;
    input {
      transition: width 250ms ease;
      font-size: 1rem;
      margin-bottom: 0;
      padding-right: 0;
      padding-left: 2.75rem;
      // padding-right: 40px;
      padding-right: 0;
      line-height: $navbar-university-height - 1px;
      height: $navbar-university-height - 1px;
      width: 0px;
      cursor: pointer;
      &:valid, &:focus, &:active {
        width: 130px;
        cursor: text;
        padding-right: 40px;
      }
    }
    &:focus input, &:active input {
      width: 130px;
      cursor: text;
      padding-right: 40px;
    }
    label[for="search"] {
      pointer-events: none;
      -webkit-pointer-events: none;
    }
    label[for="submit"] {
      // float: right;
      // float: right;
      margin-left: 170px;
      border-radius: 60px;
      i.material-icons {
        border-radius: 50%;
        background: $tu-cherry;
        color: white;
        height: 30px;
        width: 30px;
        line-height: 30px;
        text-align: center;
        margin-top: 10px;
        box-shadow: 1px 1px 13px darkgrey;
        cursor: pointer;
      }
    }
    label {
      &.active i { color: $navbar-university-font-color; }
    }
  }
}

// College Dropdown
div.college-dropdown {
  background: $tu-cherry;
  color: white;
  // padding: 1rem 0;
  // margin-bottom: 2rem;
  transition: padding 100ms ease, height 100ms ease-in, box-shadow 150ms ease;
  height: 0px;
  overflow: hidden;
  background: none;
  // margin-bottom: -2em;
  a {
    color: white;
    display: block;
    &:focus, &:active {
      outline: 2px dotted white;
    }
  }
  ul {
    margin-bottom: 0;
    margin-top: 0;
  }
}
body.college-dropdown-is-open {
  div.college-dropdown {
    padding: 1rem 0;
    height: auto;
    background: $tu-cherry;
    @extend .z-depth-1;
    // margin-bottom: -1.35em;
  }
  i.college-droptown-toggle-arrow {
    transform: rotateX(180deg);
  }
}


// College Nav
div.college-nav {
  .container {
    position: relative;
    .row {
      margin-top: 20px;
    }
  }

  // .college-title {
  //   font-weight: bold;
  //   line-height: 2.5em;
  //   background: #a41e35;
  //   color: white;
  //   font-style: normal;
  //   padding: 0rem .75rem 0rem 1rem;
  //   display: inline-block;
  //   border-bottom-left-radius: 10px;
  //   border-bottom-right-radius: 10px;
  //   font-size: 1rem;
  //   margin-left: -1.25rem;
  //   letter-spacing: 0px;
  //   @media #{$large-and-up} {
  //     position: absolute;
  //     top: -2.85em;
  //     left: 250px;
  //     border-radius: 50px !important;
  //     background: none !important;
  //     color: #a41e35 !important;
  //   }
  // }

  h1.program-title {
    // margin: .25rem 0 .55rem 0;
    font-size: 3rem;
    font-weight: bold;
    font-family: $title-font-family;
    display: inline-block;
    @media #{$small-and-down} {
      font-size: 2rem;
      vertical-align: top;
      margin-top: 1.5rem;
    }
  }

  .college-nav h1 {
    margin: .25rem 0 .55rem 0;
    @media #{$medium-and-down} {
      text-align: center;
    }
  }

  .college-link {
    text-align: center;
    margin-top: .5rem;
    display: inline-block;
    a {
      display: inline-block;
      i.material-icons {
        font-size: 24px;
        margin-right: 0;
      }
    }
  }
  .nav-toggle-link {
    text-align: center;
    margin-top: .75rem;
    margin-right: 1.5rem;
    padding-right: 1.5rem;
    display: inline-block;
    padding-bottom: 0.25rem;
    border-right: 1px solid lightGray;
    font-weight: bold;
    @media #{$medium-and-up} {
      display: none;
    }
  }

}

// Program Nav
nav.program-nav ul {
  overflow: hidden;
  font-weight: bold;
  i, [class^="mdi-"], [class*="mdi-"], i.material-icons {
    line-height: 64px;
    height: 64px;
  }
}

@media #{$large-and-up} {
  nav.program-nav ul {
    // width: 100%;
    display: flex;
    width: calc(100% + 40px);
    margin: 0 -20px;
    li {
      flex-grow: 1;
      text-align: center;
      a {
        border-right: 1px solid transparentize(white, .5);
      }
      &:first-of-type a {
        border-left: 1px solid transparentize(white, .5);
      }
    }
  }
}

@media #{$small-and-down} {
  nav.program-nav {
    height: auto;
    ul {
      overflow: hidden;
      height: auto;
      li {
        display: block;
        font-weight: bold;
        width: 100%;
      }
    }
  }
}

// Nav Toggle
@media #{$small-and-down} {
  div.college-nav .college-link, nav.program-nav {
    display: none;
  }
  body.nav-is-open {
    div.college-nav .college-link, nav.program-nav {
      display: block;
    }
  }
}

